--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ include:
 
 theme: jekyll-theme-hacker
 title: [Software Engineering 2 - Journal]
-description: [This is my journal for COMP-3613: Software Engineering II semester long Group project]
+description: ["This is my journal for COMP-3613: Software Engineering II semester long Group project"]
